--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>This is version v4</h1>
     <h1>This is version v5</h1>
     <h1>This is version v6</h1>
+    <h1>This is version v7</h1>
 </body>
 </html>
