--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>This is version v5</h1>
     <h1>This is version v6</h1>
     <h1>This is version v7</h1>
+    <h1>This is version v8</h1>
 </body>
 </html>
